# RobotDerby

./: .travis.yml  CMakeLists.txt  README.md
.github/actions/build-linux/: Dockerfile  action.yml  entrypoint.sh
.github/actions/check/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: all.yml
lib/: CMakeLists.txt  board.cpp  direction.cpp  game.cpp  player.cpp  prcardmove.cpp  prcardturn.cpp  robot.cpp  tile.cpp
lib/include/: board.h  direction.h  game.h  player.h  prcardmove.h  prcardturn.h  programmingcard.h  robot.h  tile.h  tilefeature.h
lib/test/: CMakeLists.txt  test_board.cpp  test_board_robot_movement.cpp  test_board_walls.cpp  test_prcardmove.cpp  test_prcardturn.cpp
qt_gui/: CMakeLists.txt  main.cpp  wndmain.cpp  wndmain.h
qt_gui/ui/: wndmain.ui
